# SCRYBE

./: .clang-format  CMakeLists.txt  CMakePresets.json  vcpkg.json
header/editor/: scry_camera.h  scry_editor_branch_node.h  scry_editor_choice_node.h  scry_editor_dialogue_node.h  scry_editor_goto_node.h  scry_editor_merge_node.h  scry_editor_node.h  scry_editor_split_node.h  scry_editor_switch_node.h
header/input/: scry_action.h  scry_input.h
header/render/: scry_buffer.h  scry_shader.h  scry_shader_stage.h
header/utils/: scry_assert.h  scry_gen_utils.h  scry_hash_map.h  scry_hints.h  scry_json_utils.h
header/utils/core/: scry_assert.h  scry_storage.h
header/utils/io/: scry_file.h
header/utils/text/: scry_parse.h  scry_string_pool.h  scry_string_utils.h
header/vm/: scry_dialogue_cli.h  scry_ir.h  scry_sdlg.h  scry_sdlg_compiler.h  scry_sdlg_disassembler.h  scry_sdlg_loader.h  scry_vm.h
header/window/: scry_window.h
src/: main.c
src/editor/: scry_camera.c  scry_editor_branch_node.c  scry_editor_choice_node.c  scry_editor_dialogue_node.c  scry_editor_goto_node.c  scry_editor_merge_node.c  scry_editor_node.c  scry_editor_split_node.c  scry_editor_switch_node.c
src/input/: scry_action.c  scry_input.c
src/render/: scry_buffer.c  scry_shader.c  scry_shader_stage.c
src/utils/: scry_assert.c  scry_file.c  scry_hash_map.c  scry_json_utils.c  scry_parse.c  scry_string_pool.c  scry_string_utils.c
src/utils/collections/: scry_hash_map.c
src/utils/core/: scry_assert.c
src/utils/io/: scry_file.c
src/utils/json/: scry_json_utils.c
src/utils/text/: scry_parse.c  scry_string_pool.c  scry_string_utils.c
src/vm/: scry_dialogue_cli.c  scry_ir.c  scry_sdlg.c  scry_sdlg_compiler.c  scry_sdlg_disassembler.c  scry_sdlg_loader.c  scry_vm.c
src/window/: scry_window.c
tools/: run_external.sh
